2003-07-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/parmesan-custodes.mf (dir_down): remove _ from glyph names.

	* NEWS: use complete sentences.

	* Documentation/user/introduction.itely (Example applications):
	add note about databases and lilypond-book.

	* input/test/volta.ly: remove file

	* input/regression/volta-broken-left-edge.ly: simplify file

2003-07-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Constructing a tweak): new
	subsection.

	* Documentation/user/tutorial.itely (Fine tuning layout): add
	common tweaks.

	* scm/define-grobs.scm (TextScript): use new brewer.

2003-06-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: release 1.7.23

	* scm/new-markup.scm (brew-new-markup-molecule): bugfix 

	* python/lilylib.py (make_ps_images): bugfixes.

	* input/regression/volta-multi-staff.ly: new file.

	* Documentation/user/macros.itexi: refcommands, refcommand macros.

	* Documentation/user/tutorial.itely (Piano staffs): new section.
	(Setting variables): new section
	(Fine tuning layout): new section

	* input/just-friends.ly: remove file. Superseeded by
	input/test/chords-without-melody.ly

	* ly/property-init.ly: add all commands to refman.

	* scm/define-translator-properties.scm: remove
	graceAccidentalSpace, graceAlignPosition, keyOctaviation 

	* mf/parmesan-custodes.mf (dir_down): remove underscore from glyph
	name. Underscores botch up PS output.

	* scm/define-translator-properties.scm: remove
	textNonEmpty, oneBeat, regularSpacingDelta

	* scripts/convert-ly.py (FatalConversionError.conv): conversion
	rule for automaticBars.

	* lily/timing-engraver.cc (start_translation_timestep): change
	barNonAuto to automaticBars

2003-06-30  Graham Percival  <gperlist@shaw.ca>

	* input/test/perform-tie.ly: delete file.

2003-06-29  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely (Gregorian square neumes
	ligatures): bugfix: do not show ledger lines in neumes table